# cato-code

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  TESTING.md  TODOLIST.md  docker-compose.yml  pyproject.toml  readme-header.html  skills-lock.json
.github/workflows/: ci.yml
docs/: deploy-gcp.md
frontend/: .env.local.example  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActivityDetail.tsx  ActivityTable.tsx  GroupedActivityTable.tsx  LiveDashboard.tsx  RepoList.tsx  StatCard.tsx  UserNav.tsx
frontend/src/lib/: api.ts  dashboard-refresh.test.ts  dashboard-refresh.ts  types.ts
src/catocode/: cli.py  codebase_graph_runtime.py  config.py  context_retriever.py  dispatcher.py  embeddings.py  entitlements.py  issue_indexer.py  resolution_plan.py  runtime_envelope.py  scheduler.py  session_runtime.py  skill_renderer.py  store.py
src/catocode/api/: __init__.py  app.py  crypto.py  deps.py  oauth.py  routes.py
src/catocode/container/: Dockerfile  manager.py  registry.py
src/catocode/dashboard/: __init__.py
src/catocode/decision/: engine.py
src/repocraft/: cli.py  config.py  dispatcher.py
tests/: test_analyze_issue_localization.py  test_auth.py  test_basic.py  test_container_worktrees.py  test_context_retriever.py  test_dashboard.py  test_decision_engine.py  test_dispatcher_cg_runtime.py  test_dispatcher_context.py  test_dispatcher_sessions.py  test_dispatcher_setup.py  test_github_app.py  test_oauth.py  test_repo_memory_refresh.py  test_resolution_plan.py  test_run_activity.py  test_runtime_envelope.py  test_scheduler_runtime_auth.py  test_session_gc.py  test_skill_renderer.py  test_store_repo_runtime.py  test_store_sessions.py  test_unit.py  test_webhook.py  test_webhook_repo_refresh.py  test_webhook_session_routing.py
(+32 files in other folders)
