[project]
name = "catocode"
version = "0.1.0"
description = "AI-powered GitHub issue reproducer, fixer, and verifier with evidence chains"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "sse-starlette>=3.3.2",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]

[project.scripts]
catocode = "catocode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catocode"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
